--- a/src/assets/style/_slider.scss
+++ b/src/assets/style/_slider.scss
@@ -8,14 +8,14 @@
     &__leftBox {
         width: 45%;
         background-color: #FEC640;
-        border: 1px solid #FEC640;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &__rightBox {
         width: 55%;
-        border: 1px solid #FEC640;
         overflow: hidden;
-        // overflow-x: scroll;
         position: relative;
     }
 
@@ -34,7 +34,7 @@
         z-index: 100;
 
         .bx {
-            font-size: 24px;
+            font-size: 26px;
         }
     }
 
@@ -53,7 +53,7 @@
         z-index: 100;
 
         .bx {
-            font-size: 24px;
+            font-size: 26px;
         }
     }
 
@@ -62,7 +62,6 @@
         padding: 0;
         display: flex;
         transition: 0.4s ease;
-        // transform: translateX(0px);
     }
 
     &__item {
@@ -77,25 +76,97 @@
     }
 
     &__desc {
+        width: 100%;
         position: absolute;
-        bottom: 15px;
-        left: 50%;
-        transform: translate(-50%, 0);
+        bottom: 0;
+        left: 0;
+        padding: 0 0 15px 15px;
+        -webkit-box-shadow: inset 0px -39px 31px -2px rgba(0,0,0,0.71); 
+        box-shadow: inset 0px -39px 31px -2px rgba(0,0,0,0.71);
     }
 
     &__title {
         color: #fff;
-        font-size: 45px;
+        font-family: 'Anton', sans-serif;
+        font-size: 32px;
+        letter-spacing: 2px;
     }
 
     &__text {
         margin: 0;
-        font-size: 20px;
+        font-size: 1rem;
         color: #fff;
+        width: 80%;
+        margin-bottom: 10px;
+    }
+
+    a {
+        font-family: 'Anton', sans-serif;
+        text-decoration: none;
+        font-size: 14px;
+        color: #fff;
+        letter-spacing: 1px;
+        cursor: pointer;
+    }
+
+}
+
+.infos {
+    width: 40%;
+
+    &__title {
+        font-family: 'Anton', sans-serif;
+        font-size: 35px;
+        letter-spacing: 1.5px;
+        line-height: 45px;
+        margin-bottom: 20px;
+    }
+
+    &__text {
+        font-size: 1.2rem;
+        font-weight: 500px;
+        margin-bottom: 30px;
+    }
+
+    a {
+        font-family: 'Anton', sans-serif;
+        text-decoration: none;
+        font-size: 14px;
+        color: #191919;
+        letter-spacing: 1px;
+        cursor: pointer;
     }
 }
 
-.ulStyle {
-    transform: translateX(-300px);
-    transition: 0.4s ease;
+
+@media screen and (max-width: 778px) {
+    .slider {
+        height: 100%;
+        padding-top: 0;
+        flex-direction: column;
+
+        &__leftBox {
+            height: 50%;
+            width: 100%;
+        }
+
+        &__rightBox {
+            height: 30%;
+            width: 100%;
+        }
+
+        &__item {
+            height: 500px;
+        }
+    
+        &__img {
+            height: 500px;
+        }
+    }
+    
+    .infos {
+        padding: 45px 0; 
+        width: 70%;
+    }
+
 }
