--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -1,2 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 @import "slider";
 
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
